# hanual

./: .coverage  .dmypy.json  .gitignore  .pre-commit-config.yaml  DESIGN.md  LICENSE  Makefile  README.md  TODO.txt  bin\hworld.chnl  changelog.md  conf.py  index.rst  main.cpp  main.py  no.sh  pyproject.toml  requirements.txt  setup.cfg  test.py  todo.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
code/: io.hnl  main.hnl
dev/tools/document/: README.md  __main__.py  doc_parser.py  documentation.py  template.py
doc/: README.md  parse-lib.md
doc/dox/: Language.one  Open Notebook.onetoc2
doc/hsc/: style.md
doc/lang/: README.md
doc/lang/back-end/: compiler.md  included_libraries.md
doc/parser+lexer/: parser.md
docs/: Index.md  reference.md
docs/Compiler Architecture/: Overview.md
examples/: full-example.py
src/: lexer.py  main.py  parser.py
src/api/: ex_lexer.py
src/cli/: __main__.py
src/hanual/: README.md  __main__.py  version.py
src/hanual/api/: exportable_module.py  hook.py  load_hooks.py
src/hanual/bootstrap/: IO.hint  System.hul
src/hanual/cli/: __main__.py  example.toml
src/hanual_cpp/: main.c
src/lang/: bytecode.py  compile.py  context.py  lexer.py  main.py  pparser.py  productions.py  proxy.py  rules.py  test.py  util.py
src/lib/: io.hui
src/stdlib/: buffer_lib.hnl  io.hnl  math.f95  project.toml  rand.hnl  sys.hnl  test.py
src/test/: prodject.toml  project.toml  test.hnl
src/vm/: run_vm.sh  vm  vm.config  vm.nim
test/: test.hnl  test_conf.cfg  test_lexer_hook.py  test_parse_hook.py  test_preproc_hook.py
(+266 files in other folders)
