[metadata]
name = hanual
description = python api for the hanual language
author = Han Manseck | Nathanual Teaton
license = MIT
license_file = LICENSE
platforms = unix, luinix, win32
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    lang
    api

install_requires = 

python_requires = >=3.9
package_dir = 
    =src

zip_safe = no
