[metadata]
name = hanual
description = python api for the hanual language
author = Han Manseck
license = MIT
license_file = LICENSE
platforms = unix, luinix, win32
classifiers =
    Programming Language :: Python :: 3.12

[options]
packages =
    hanual

install_requires = 

python_requires = >= 3.12
package_dir = 
    =src

zip_safe = no
